--- a/email/email_common.css
+++ b/email/email_common.css
@@ -26,7 +26,7 @@ a:visited {color:#0066cc;}
 .coupon-code {font-weight:bold;}
 .gv-block { padding: 5px; border: 1px #cccccc solid; background-color: #99FF99; }
 .content-line-title {font-weight:bold; font-size:11px; padding-top:3px;}
-.order-detail-area {background-color:#CCCC99; border:1px #9a9a9a; width:542px; padding:2px; font-size:10px; }
+.order-detail-area {background-color:#1acaaf; border:1px #9a9a9a; width:542px; padding:2px; font-size:10px; }
 .product-details {font-size:10px;}
 .product-details-num {font-size:10px; font-weight:bold;}
 .order-totals-text {font-size:10px; font-weight:bold;}
